# docs/swagger.yaml
@@ -61,6 +61,86 @@ definitions:
       validation_for:
         type: string
     type: object
+  constants.AccountStatus:
+    enum:
+    - ACTIVE
+    - INACTIVE
+    type: string
+    x-enum-varnames:
+    - Active
+    - InActive
+  constants.BPSStatus:
+    enum:
+    - AUTHORIZED
+    - DENIED
+    - PENDING
+    - INITIATED
+    type: string
+    x-enum-varnames:
+    - BPSStatusAuthorized
+    - BPSStatusDenied
+    - BPSStatusPending
+    - BPSStatusInitiated
+  constants.DeviceStatus:
+    enum:
+    - LINKED
+    - UNLINKED
+    type: string
+    x-enum-varnames:
+    - Linked
+    - UnLinked
+  constants.Gender:
+    enum:
+    - MALE
+    - FEMALE
+    type: string
+    x-enum-varnames:
+    - Male
+    - Female
+  constants.KYCStatus:
+    enum:
+    - PENDING
+    - APPROVED
+    - REJECTED
+    type: string
+    x-enum-varnames:
+    - KYCStatusPending
+    - KYCStatusApproved
+    - KYCStatusRejected
+  constants.MemberType:
+    enum:
+    - CB
+    - IFB
+    type: string
+    x-enum-varnames:
+    - CBT
+    - IFBT
+  constants.Platform:
+    enum:
+    - ANDROID
+    - IOS
+    type: string
+    x-enum-varnames:
+    - Android
+    - Ios
+  constants.Realm:
+    enum:
+    - ELST
+    - BANK
+    - DISTRICT
+    - BRANCH
+    - MERCHANT
+    - COMPANY
+    - MEMBER
+    type: string
+    x-enum-varnames:
+    - ELST_REALM
+    - BANK_REALM
+    - DISTRICT_REALM
+    - BRANCH_REALM
+    - MERCHANT_REALM
+    - COMPANY_REALM
+    - MEMBER_REALM
   localization.ResponseCode:
     properties:
       code:
@@ -73,6 +153,18 @@ definitions:
         type: string
       type:
         description: '"success", "error", "warning", "info"'
+        type: string
+    type: object
+  model.APIResponse:
+    properties:
+      data: {}
+      message:
+        type: string
+      ok:
+        type: boolean
+      status:
+        type: integer
+      timestamp:
         type: string
     type: object
   model.ProductCode:
@@ -99,6 +191,176 @@ definitions:
       trxn:
         type: string
       vatprd:
+        type: string
+    type: object
+  model.User:
+    properties:
+      account_branch_type:
+        $ref: '#/definitions/constants.MemberType'
+      account_linked:
+        type: boolean
+      account_status:
+        $ref: '#/definitions/constants.AccountStatus'
+      address:
+        $ref: '#/definitions/types.Address'
+      app_version:
+        type: string
+      application_installation_date:
+        type: string
+      avater:
+        type: string
+      birth_date:
+        type: string
+      blocked_on_cps:
+        description: 'default: false'
+        type: boolean
+      bps_reject_failed:
+        description: questioned
+        items:
+          type: string
+        type: array
+      bps_reject_reason:
+        type: string
+      bps_reject_status:
+        allOf:
+        - $ref: '#/definitions/constants.BPSStatus'
+        description: questioned
+      branch_approved:
+        type: boolean
+      branch_code:
+        type: string
+      branch_name:
+        type: string
+      created_at:
+        type: string
+      customer_number:
+        type: string
+      device_status:
+        $ref: '#/definitions/constants.DeviceStatus'
+      device_uuid:
+        type: string
+      district_code:
+        type: string
+      district_name:
+        type: string
+      document_back:
+        type: string
+      document_front:
+        type: string
+      email:
+        type: string
+      enabled:
+        type: boolean
+      fayda:
+        properties:
+          employer_name:
+            type: string
+          employment_status:
+            type: string
+          fayda_access_token:
+            type: string
+          id_number:
+            type: string
+          issued_by:
+            type: string
+          monthly_incode:
+            type: integer
+        type: object
+      first_pin_set:
+        type: boolean
+      full_name:
+        type: string
+      gender:
+        $ref: '#/definitions/constants.Gender'
+      id:
+        type: string
+      initial_linked_at:
+        type: string
+      initial_linked_date:
+        type: string
+      is_account_blocked:
+        type: boolean
+      is_blocked:
+        description: 'default: false'
+        type: boolean
+      is_deleted:
+        type: boolean
+      is_self_register:
+        type: boolean
+      is_verified:
+        type: boolean
+      issued_date:
+        type: string
+      kyc:
+        properties:
+          kyc_activity_by:
+            additionalProperties:
+              type: object
+            type: object
+          kyc_approved:
+            type: boolean
+          kyc_reject_reason:
+            type: string
+          kyc_reject_reason_failed:
+            additionalProperties:
+              type: object
+            type: object
+          kyc_status:
+            $ref: '#/definitions/constants.KYCStatus'
+        type: object
+      last_account_linked:
+        type: boolean
+      last_login:
+        type: string
+      last_login_attempt:
+        type: string
+      last_main_account:
+        type: string
+      last_modified_at:
+        type: string
+      last_online_date:
+        type: string
+      level:
+        type: integer
+      loan_score:
+        type: integer
+      login_attempt_count:
+        type: integer
+      login_pin:
+        $ref: '#/definitions/types.LoginPIN'
+      main_account:
+        type: string
+      mother_name:
+        type: string
+      nationality:
+        type: string
+      next_attempt_count:
+        type: string
+      otp_verify_count:
+        type: integer
+      phone_number:
+        type: string
+      photo:
+        type: string
+      pin_changed_at:
+        type: string
+      platform:
+        $ref: '#/definitions/constants.Platform'
+      profile_theme_type:
+        type: string
+      push_token:
+        type: string
+      realm:
+        $ref: '#/definitions/constants.Realm'
+      register_by:
+        type: object
+      residential_status:
+        type: string
+      signature:
+        type: string
+      user_code:
+        type: string
+      username:
         type: string
     type: object
   productcode.ProductCodePaginatedResponse:
@@ -128,6 +390,36 @@ definitions:
         type: string
       product_name:
         type: string
+    type: object
+  types.Address:
+    properties:
+      city:
+        type: string
+      house_number:
+        type: string
+      kebele:
+        type: string
+      region:
+        type: string
+      street_name:
+        type: string
+      sub_city:
+        type: string
+      wereda:
+        type: string
+      zone:
+        type: string
+    type: object
+  types.LoginPIN:
+    properties:
+      last_pin_created_at:
+        type: string
+      pin:
+        type: string
+      pin_history:
+        items:
+          type: string
+        type: array
     type: object
 host: localhost:8080
 info:
@@ -952,6 +1244,162 @@ paths:
       summary: Update a product code
       tags:
       - Product Code
+  /unlink/archived_user:
+    get:
+      consumes:
+      - application/json
+      description: Get archived user
+      parameters:
+      - description: Page number
+        in: query
+        name: page
+        type: integer
+      - description: Items per page
+        in: query
+        name: per_page
+        type: integer
+      - description: Search term
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User retrieved successfully
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.APIResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/model.User'
+                  type: array
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.APIResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
+        "500":
+          description: Internal server error
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.APIResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
+      security:
+      - BearerAuth: []
+      summary: Get archived user
+      tags:
+      - Unlink
+  /unlink/user-by-account/{account_number}:
+    get:
+      consumes:
+      - application/json
+      description: Get user by account
+      parameters:
+      - description: Account number
+        in: path
+        name: account_number
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User retrieved successfully
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.APIResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.User'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.APIResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
+        "404":
+          description: User not found
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.APIResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
+        "500":
+          description: Internal server error
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.APIResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
+      security:
+      - BearerAuth: []
+      summary: Get user by account
+      tags:
+      - Unlink
+  /unlink/user_cif/{user_code}:
+    patch:
+      consumes:
+      - application/json
+      description: Unlink user CIF
+      parameters:
+      - description: User code
+        in: path
+        name: user_code
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 'Unlink CIF request sent successfully '
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.APIResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.APIResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
+        "500":
+          description: Internal server error
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.APIResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
+      security:
+      - BearerAuth: []
+      summary: Unlink user CIF
+      tags:
+      - Unlink
 securityDefinitions:
   BearerAuth:
     description: Type "Bearer" followed by a space and JWT token.
